--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Allin_Android</string>
+    <string name="Name">Это приложение созданно для проекта</string>
 </resources>
