--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Allin_Android</string>
     <string name="Name">Это приложение созданно для проекта</string>
+    <string name="But1">Часы</string>
+    <string name="But2">Дневник</string>
+    <string name="But3">Список приложений</string>
 </resources>
